# Phoenix

./: CMakeLists.txt  README.md
Game/: main.cpp
Game/Core/: Game.cpp  Game.h
Phoenix/Core/: App.cpp  App.h
Phoenix/Renderer/: Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
